Import of TMHARISH/XML-Smart-1.74 from CPAN.
gitpan-cpan-distribution: XML-Smart
gitpan-cpan-version:      1.74
gitpan-cpan-path:         TMHARISH/XML-Smart-1.74.tar.gz
gitpan-cpan-author:       TMHARISH
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 ---
-abstract: "A smart, easy and powerful way to access/create XML files/data."
+abstract: "A smart, easy and powerful way to access or create XML from fiels, data and URLs."
 author:
-  - 'Graciliano M. P. <gm@virtuasites.com.br>'
+  - 'Graciliano M. P. <gm AT virtuasites.com.br>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.112621'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,5 +18,5 @@ no_index:
     - t
     - inc
 requires:
-  Object::MultiType: 0.03
-version: 1.73
+  perl: 5.006
+version: 1.74
